HTML & CSS finished for people and vehicle i think, do add vehicle after..... start with the search function w requirements from pdf

--- a/web/pages/add-vehicle.html
+++ b/web/pages/add-vehicle.html
@@ -10,7 +10,7 @@
 
 
 <header>
-  <h1>Add a vehicle</h1>
+  <h1>Add a Vehicle</h1>
       <ul>
         <li><a href="people-search.html">People search</a></li>
         <li><a href="vehicle-search.html">Vehicle search</a></li>
@@ -18,8 +18,7 @@
       </ul>
 </header>
 
-<section class="main-sidebar-footer">
-  <section class="main-sidebar">
+<section class="container">
     <main>
       <section class="content">
         <br>
@@ -27,11 +26,10 @@
         <p>Search by driving license number <input type="text" id="driverLicence" placeholder="Enter Licence..."></p>
         <br>
         
-        <button id="infoSub">Submit</button>
+        <button id="submit-info">Submit</button>
         
-        <div id="boxtable">
-          <div id="peopleData">aa</div>
-        </div> 
+        <p id="message"></p>
+          <div id="results">aa</div>
       </section>
     </main>
 
@@ -39,7 +37,6 @@
       <h2>Sidebar</h2>
       <img src="../addCar.png" alt="Simple add vehicle" style="max-width: 70%;">
     </aside>
-  </section>
   <footer>
     <p>Footer</p>
   </footer>
