--- a/web/pages/people-search.html
+++ b/web/pages/people-search.html
@@ -10,7 +10,7 @@
 
 
 <header>
-  <h1>People search</h1>
+  <h1>People Search</h1>
       <ul>
         <li><a href="people-search.html">People search</a></li>
         <li><a href="vehicle-search.html">Vehicle search</a></li>
@@ -18,28 +18,24 @@
       </ul>
 </header>
 
-<section class="main-sidebar-footer">
-  <section class="main-sidebar">
+<section class="container">
     <main>
       <section class="content">
         <br>
-        <p>Search by driver name <input type="text" id="driverName" placeholder="Enter name..."></p>
-        <p>Search by driving license number <input type="text" id="driverLicence" placeholder="Enter Licence..."></p>
+        <p>Search by driver name <input type="text" id="name" placeholder="Enter name..."></p>
+        <p>Search by driving license number <input type="text" id="license" placeholder="Enter Licence..."></p>
         <br>
         
-        <button id="infoSub">Submit</button>
-        
-        <div id="boxtable">
-          <div id="peopleData">aa</div>
-        </div> 
+        <button id="submit-info">Submit</button>
+        <p id="message"></p>
+          <div id="results"></div>
       </section>
     </main>
 
     <aside class="sidebar">
-      <h2>Sidebar</h2>
-      <img src="../people.png" alt="Simple figures" style="max-width: 70%;">
+      <br>
+      <img src="../people.png" alt="Simple figures" style="max-width: 90%;">
     </aside>
-  </section>
   <footer>
     <p>Footer</p>
   </footer>
