--- a/web/pages/vehicle-search.html
+++ b/web/pages/vehicle-search.html
@@ -10,7 +10,7 @@
 
 
 <header>
-  <h1>Vehicle search </h1>
+  <h1>Vehicle Search</h1>
       <ul>
         <li><a href="people-search.html">People search</a></li>
         <li><a href="vehicle-search.html">Vehicle search</a></li>
@@ -18,20 +18,18 @@
       </ul>
 </header>
 
-<section class="main-sidebar-footer">
-  <section class="main-sidebar">
+<section class="container">
     <main>
       <section class="content">
         <br>
-        <p>Search by driver name <input type="text" id="driverName" placeholder="Enter name..."></p>
-        <p>Search by driving license number <input type="text" id="driverLicence" placeholder="Enter Licence..."></p>
+        <p>Search by driver name <input type="text" id="name" placeholder="Enter name..."></p>
+        <p>Search by vehicle registration/plate number <input type="text" id="rego" placeholder="Enter reg/plate..."></p>
         <br>
         
-        <button id="infoSub">Submit</button>
+        <button id="submit-info">Submit</button>
         
-        <div id="boxtable">
-          <div id="peopleData">aa</div>
-        </div> 
+        <p id="message"></p>
+          <div id="results"></div>
       </section>
     </main>
 
@@ -39,7 +37,6 @@
       <h2>Sidebar</h2>
       <img src="../car.png" alt="Simple vehicle" style="max-width: 70%;">
     </aside>
-  </section>
   <footer>
     <p>Footer</p>
   </footer>
