first part of add-vehicle

--- a/web/pages/add-vehicle.html
+++ b/web/pages/add-vehicle.html
@@ -22,14 +22,16 @@
     <main>
       <section class="content">
         <br>
-        <p>Search by driver name <input type="text" id="driverName" placeholder="Enter name..."></p>
-        <p>Search by driving license number <input type="text" id="driverLicence" placeholder="Enter Licence..."></p>
+        <p>Vehicle registration/plate number: <input type="text" id="rego"></p>
+        <p>Vehicle make: <input type="text" id="make"></p>
+        <p>Vehicle model: <input type="text" id="model"></p>
+        <p>Vehicle colour: <input type="text" id="colour"></p>
+        <p>Vehicle owner: <input type="text" id="owner"></p>
         <br>
         
-        <button id="submit-info">Submit</button>
+        <button id="addVehicle">Add</button>
         
         <p id="message"></p>
-          <div id="results">aa</div>
       </section>
     </main>
 
