People and Vehicle searches complete-- next todo:addVehicle page

--- a/web/pages/people-search.html
+++ b/web/pages/people-search.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>1004 CW - Add Vehicle</title>
+<title>1004 CW - People Search</title>
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <p>Search by driving license number <input type="text" id="license" placeholder="Enter Licence..."></p>
         <br>
         
-        <button id="submit-info">Submit</button>
+        <button id="submit-info-people">Submit</button>
         <p id="message"></p>
           <div id="results"></div>
       </section>
@@ -41,6 +41,6 @@
   </footer>
 </section>
 
-<script src="../script.js" type="module"></script>
+<script src="../peoplefunc.js" type="module"></script>
 </body>
 </html>
