--- a/web/pages/vehicle-search.html
+++ b/web/pages/vehicle-search.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>1004 CW - Add Vehicle</title>
+<title>1004 CW - Vehicle Search</title>
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -26,15 +26,14 @@
         <p>Search by vehicle registration/plate number <input type="text" id="rego" placeholder="Enter reg/plate..."></p>
         <br>
         
-        <button id="submit-info">Submit</button>
-        
+        <button id="submit-info-vehicle">Submit</button>
         <p id="message"></p>
           <div id="results"></div>
       </section>
     </main>
 
     <aside class="sidebar">
-      <h2>Sidebar</h2>
+      <br>
       <img src="../car.png" alt="Simple vehicle" style="max-width: 70%;">
     </aside>
   <footer>
@@ -42,6 +41,6 @@
   </footer>
 </section>
 
-<script src="../script.js"type="module"></script>
+<script src="../vehiclefunc.js" type="module"></script>
 </body>
 </html>
