--- a/web/pages/add-vehicle.html
+++ b/web/pages/add-vehicle.html
@@ -22,11 +22,16 @@
     <main>
       <section class="content">
         <br>
-        <p>Vehicle registration/plate number: <input type="text" id="rego"></p>
-        <p>Vehicle make: <input type="text" id="make"></p>
-        <p>Vehicle model: <input type="text" id="model"></p>
-        <p>Vehicle colour: <input type="text" id="colour"></p>
-        <p>Vehicle owner: <input type="text" id="owner"></p>
+        <label for="rego">Vehicle registration/plate number:</label>
+        <input type="text" id="rego"><br>
+        <label for="make">Vehicle make:</label>
+        <input type="text" id="make"><br>
+        <label for="model">Vehicle model:</label>
+        <input type="text" id="model"><br>
+        <label for="colour">Vehicle colour:</label>
+        <input type="text" id="colour"><br>
+        <label for="owner">Vehicle owner:</label>
+        <input type="text" id="owner">
         <br>
         
         <button id="addVehicle">Add vehicle</button>
