--- a/web/pages/add-vehicle.html
+++ b/web/pages/add-vehicle.html
@@ -18,7 +18,7 @@
       </ul>
 </header>
 
-<section class="container">
+<section id="container">
     <main>
       <section class="content">
         <br>
